Fix scrollbar issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,8 +8,6 @@ body,
   align-items: stretch;
   flex-grow: 1;
   width: 100%;
-  min-height: 100%;
-  height: 100%;
 }
 
 body {
