--- a/src/screens/Widget.module.scss
+++ b/src/screens/Widget.module.scss
@@ -5,7 +5,6 @@
   width: 640px;
   box-shadow: 0px 20px 10px 0px rgba(0, 0, 0, 0.2);
   border-radius: $primaryBorderRadius;
-  height: 100%;
 }
 
 .fmContainer {
